# CSR5_CUDA_Lib

./: .gitignore  CMakeLists.txt  README.md
cmake/: csr5_cudaConfig.cmake.in
include/: anonymouslib_cuda.h
include/detail/cuda/: csr5_spmv_cuda.cuh  csr5_spmv_cuda.h  format_cuda.cuh  format_cuda.h  utils_cuda.cuh  utils_cuda.h
src/: CMakeLists.txt  csr5_cuda.cu
test/: CMakeLists.txt  main.cu
test/include/: mmio.h
test/src/: main.cu
